[package]
name = "mcp-server-freshbooks"
version = "0.1.0"
edition = "2024"
description = "MCP server for FreshBooks accounting API"

[[bin]]
name = "freshbooks-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"

[profile.release]
lto = true
strip = true
